# replay-control

./: .gitignore  AGENTS.md  AI_CONTEXT.md  AI_POLICY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile.replayos  Containerfile.test  NOTES.md  NOTICES.md  README.md  TECHNICAL.md  UX.md  build.sh  dev.sh  install.sh  release-plz.toml
replay-app/: Cargo.toml
replay-app/src/: i18n.rs  lib.rs  main.rs  server_fns.rs  types.rs  util.rs
replay-app/src/api/: favorites.rs  mod.rs  recents.rs  roms.rs  system_info.rs  upload.rs
replay-app/src/components/: nav.rs  rom_list.rs
replay-app/src/pages/: favorites.rs  game_detail.rs  games.rs  home.rs  mod.rs  more.rs  nfs.rs  wifi.rs
replay-app/static/: manifest.json  sw.js
replay-app/style/: style.css
replay-control-app/: Cargo.toml  build.rs
replay-control-app/src/: client_cache.rs  i18n.rs  lib.rs  main.rs  server_fns.rs  types.rs  util.rs
replay-control-app/src/api/: activity.rs  analytics.rs  auth_gate.rs  background.rs  cache.rs  core_api.rs  db_pools.rs  export.rs  favorites.rs  import.rs  library_systems.rs  mod.rs  mountinfo_watcher.rs  now_playing.rs  recents.rs  replay_api.rs  response_cache.rs  roms.rs  system_info.rs  thumbnail_orchestrator.rs  thumbnail_pipeline.rs  updates.rs  upload.rs  waiting.rs
replay-control-app/src/components/: achievements_section.rs  asset_health_banner.rs  boxart_picker.rs  boxart_placeholder.rs  captures.rs  confirm_dialog.rs  corruption_banner.rs  device_only_notice.rs  filter_chips.rs  game_list_item.rs  game_notes_section.rs  game_section_row.rs  game_status_section.rs  genre_dropdown.rs  hero_card.rs  hltb_section.rs  manual_section.rs  metadata_banner.rs  mod.rs  nav.rs  now_playing_bar.rs  now_playing_indicator.rs  reboot_button.rs  replay_api_status_banner.rs  resources_section.rs  rom_list.rs  rom_watcher_banner.rs  search_controls.rs  series_timeline.rs  setup_checklist.rs  stat_card.rs  status_message.rs  stop_game_button.rs  storage_status_banner.rs  system_card.rs  system_filter_chips.rs  system_status_banner.rs  theme_selector.rs  update_banner.rs  video_section.rs
replay-control-app/src/hooks/: mod.rs  use_clock.rs  use_debounce.rs  use_focus_scroll.rs  use_infinite_scroll.rs  use_launch_control.rs  use_now_playing.rs  use_scroll_memory.rs  use_update_state.rs
replay-control-app/src/i18n/: en.rs  es.rs  ja.rs  keys.rs  mod.rs
replay-control-app/src/pages/: access.rs  backlog.rs  board.rs  collections.rs  developer.rs  favorites.rs  first_setup.rs  game_detail.rs  games.rs  github.rs  home.rs  hostname.rs  login.rs  logs.rs  metadata.rs  mod.rs  more.rs  my_games.rs  nfs.rs  password.rs  replay_net_control.rs  retroachievements.rs  search.rs  settings.rs  skin.rs  stats.rs  theme.rs  updating.rs  wifi.rs
replay-control-app/src/server_fns/: achievements.rs  auth.rs  boxart.rs  favorites.rs  game_notes.rs  game_status.rs  hltb.rs  images.rs  manuals.rs  metadata.rs  mod.rs  now_playing.rs  recommendations.rs  related.rs  replay_api.rs  resources.rs  roms.rs  save_states.rs  search.rs  settings.rs  stats.rs  system.rs  thumbnails.rs  videos.rs  want_to_play.rs
replay-control-app/static/: manifest.json  ptr-init.js  pull-to-refresh.js  sw.js
replay-control-app/style/: _01-base.css  _01b-primitives.css  _02-layout.css  _02b-banner.css  _03-utilities.css  _04-forms.css  _05-home.css  _06-systems.css  _07-rom-list.css  _08-favorites.css  _08b-collections.css  _09-game-detail.css  _10-captures.css  _11-video.css  _11b-manual.css  _11c-achievements.css  _11c-hltb.css  _11c-resources.css  _11d-series-timeline.css  _11e-stats-dashboard.css  _12-search.css  _13-menu.css  _14-metadata.css  _15-skin.css  _16-logs.css  _17-responsive.css  _18-boxart-picker.css  _19-boxart-placeholder.css  _20-game-notes.css  _20-game-status.css  _20-themes.css  _21-theme-selector.css  style.css
replay-control-app/tests/: api_tests.rs  cold_nfs_tests.rs  config_reload_tests.rs  corruption_tests.rs  facet_region_tests.rs  server_fn_tests.rs  ssr_tests.rs  update_tests.rs
replay-control-app/tests/common/: mod.rs
replay-control-core/: Cargo.toml  build.rs
replay-control-core-server/: Cargo.toml
replay-control-core-server/fixtures/: catalog.sqlite
replay-control-core-server/src/: auth.rs  catalog_pool.rs  data_dir.rs  db_pool.rs  external_metadata.rs  hltb.rs  http.rs  launch.rs  lib.rs  replay_api.rs  replay_proc.rs  replay_service.rs  settings.rs  sqlite.rs  storage_id.rs  test_utils.rs  update.rs
replay-control-core-server/src/capture/: mod.rs  screenshots.rs
replay-control-core-server/src/game/: arcade_db.rs  game_db.rs  game_ref.rs  mod.rs  series_db.rs
replay-control-core-server/src/metadata/: alias_matching.rs  db_common.rs  enrichment.rs  game_docs.rs  game_entry_builder.rs  image_matching.rs  image_resolution.rs  launchbox.rs  metadata_matching.rs  retrokit_manuals.rs  thumbnail_manifest.rs  thumbnails.rs  user_data_db.rs
replay-control-core-server/src/platform/: config.rs  storage.rs
replay-control-core-server/src/security/: tls.rs
replay-control-core-server/src/user_data/: db.rs
replay-control-core/fixtures/: catalog.sqlite  mame0285-arcade.xml
replay-control-core/fixtures/arcade/: flycast_games.csv
replay-control-core/fixtures/retroachievements/: nintendo_snes.json
replay-control-core/src/: arcade_db.rs  asset_health.rs  auth.rs  error.rs  favorites.rs  game_db.rs  game_ref.rs  hltb.rs  http.rs  languages.rs  launch.rs  launchbox.rs  lib.rs  locale.rs  metadata_db.rs  recents.rs  replay_api.rs  rom_tags.rs  roms.rs  runtime_env.rs  screenshots.rs  search_scoring.rs  settings.rs  stats.rs  storage.rs  storage_id.rs  systems.rs  thumbnail_manifest.rs  thumbnails.rs  update.rs  user_data_db.rs  videos.rs  want_to_play.rs
replay-frontend/: Cargo.toml  index.html  style.css
replay-frontend/src/: api.rs  lib.rs  main.rs  types.rs
replay-libretro-core/: Cargo.toml  build.sh  test_stability.py
replay-libretro-core/src/: draw.rs  hello_world.rs  http.rs  json.rs  layout.rs  lib.rs  palette.rs  util.rs
tools/build-catalog/: Cargo.toml
(+364 files in other folders)
