[workspace]
resolver = "2"
members = [
    "replay-control-core",
    "replay-control-core-server",
    "replay-control-app",
    "tools/generate-test-fixtures",
    "tools/build-catalog",
]

[workspace.package]
license = "GPL-3.0-or-later"
repository = "https://github.com/lapastillaroja/replay-control"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# ── Profiles ──────────────────────────────────────────────────────────────────
#
# Six profiles are intentional — SSR and WASM have different optimisation
# goals (speed vs size), and local dev iteration favors compile speed over
# binary size.
#
#              SSR server          WASM client
#   dev.sh:    dev-fast (opt 0)    wasm-dev-fast (opt 0)
#   debug:     dev (opt 1)         wasm-dev (opt "s")
#   prod:      release (opt 3)     wasm-release (opt "z")
#
# Why two dev pairs exist: dev.sh should rebuild quickly and can tolerate larger
# artifacts. The older dev/wasm-dev pair remains available when a smaller Pi
# deploy or smaller browser payload is worth the extra compile time.

# ── Fast dev (used by dev.sh) ────────────────────────────────────────────────
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"

[profile.dev-fast.package."*"]
opt-level = 0

[profile.dev-fast.build-override]
opt-level = 0

[profile.wasm-dev-fast]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"

[profile.wasm-dev-fast.package."*"]
opt-level = 0

[profile.wasm-dev-fast.build-override]
opt-level = 0

# ── Dev (SSR server) ──────────────────────────────────────────────────────────
[profile.dev]
opt-level = 1            # basic optimisations — still fast to compile
strip = "debuginfo"      # drops ~800MB → ~80MB, faster Pi deploys

[profile.dev.package."*"]
opt-level = 2            # heavier opts for deps (they rarely change)

[profile.dev.build-override]
opt-level = 2            # build scripts (serde_json, phf_codegen) run ~3-5x faster optimised

# ── Dev (WASM hydrate) ───────────────────────────────────────────────────────
[profile.wasm-dev]
inherits = "dev"
opt-level = "s"          # optimise for size — keeps dev WASM small enough

# ── Release (SSR server) ─────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = "thin"             # good LTO without fat-LTO compile cost
codegen-units = 1
strip = "symbols"

# ── Release (WASM hydrate) ───────────────────────────────────────────────────
[profile.wasm-release]
inherits = "release"
opt-level = "z"          # aggressively optimise for size
lto = true               # fat LTO — best size reduction for WASM
