[package]
name = "replay-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "replay-app"
path = "src/main.rs"

[dependencies]
leptos = "0.7"
leptos_router = "0.7"
server_fn = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2"
wasm-bindgen = "0.2"

# SSR-only
replay-core = { path = "../replay-core", optional = true }
axum = { version = "0.7", features = ["multipart"], optional = true }
leptos_axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"], optional = true }
any_spawner = { version = "0.2", features = ["tokio"], optional = true }
notify = { version = "8", optional = true }

# Hydrate-only
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
], optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "server_fn/axum-no-default",
    "dep:replay-core",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tower-http",
    "dep:tower",
    "dep:http",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:any_spawner",
    "dep:notify",
]
