[package]
name = "replay-control-app"
version = "0.1.0"
edition = "2024"
description = "Replay Control web app for RePlayOS"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "replay-control-app"
path = "src/main.rs"

[dependencies]
leptos = "0.7"
leptos_router = "0.7"
server_fn = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2"
wasm-bindgen = "0.2"
replay-control-core = { path = "../replay-control-core", default-features = false }

# SSR-only
axum = { version = "0.7", features = ["multipart"], optional = true }
leptos_axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "set-header"], optional = true }
tower = { version = "0.5", optional = true }
http = { version = "1", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"], optional = true }
any_spawner = { version = "0.2", features = ["tokio"], optional = true }
notify = { version = "8", optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }
rand = { version = "0.10", optional = true }
deadpool-sqlite = { version = "0.13", features = ["rt_tokio_1"], optional = true }
deadpool = { version = "0.13", optional = true }
deadpool-sync = { version = "0.2", optional = true }
# Hydrate-only (optional, activated by `hydrate` feature)
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "EventSource",
    "MessageEvent",
    "Storage",
    "Document",
    "Element",
    "KeyboardEvent",
], optional = true }
gloo-timers = { version = "0.4", features = ["futures"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:web-sys",
    "dep:gloo-timers",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "server_fn/axum-no-default",
    "replay-control-core/metadata",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tower-http",
    "dep:tower",
    "dep:http",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:any_spawner",
    "dep:notify",
    "dep:tokio-stream",
    "dep:async-stream",
    "dep:rand",
    "dep:deadpool-sqlite",
    "dep:deadpool",
    "dep:deadpool-sync",
    "dep:tikv-jemallocator",
]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
