[package]
name = "replay-control-app"
version = "0.6.0"
edition = "2024"
description = "Replay Control web app for RePlayOS"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "replay-control-app"
path = "src/main.rs"

[dependencies]
# Leptos ecosystem (leptos, leptos_router, leptos_axum, server_fn, any_spawner)
# and axum are EXACT-pinned (`=x.y.z`). They must upgrade together — any_spawner
# uses a process-global OnceLock, so two semver-incompatible copies create
# separate statics. cargo-edit has no ignore-file, so the exact pin is what makes
# `cargo upgrade` skip them (it leaves `=` requirements alone by default).
# Mirrors the major-version block in .github/dependabot.yml; bump these as a set.
leptos = "=0.7.8"
leptos_router = "=0.7.8"
server_fn = "=0.7.8"
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2.1.3"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = { version = "0.4.72", optional = true }
js-sys = "0.3.99"
replay-control-core = { path = "../replay-control-core", default-features = false }
replay-control-core-server = { path = "../replay-control-core-server", default-features = false, optional = true }

# SSR-only
# axum and leptos_axum are part of the exact-pinned Leptos set above.
axum = { version = "=0.7.9", features = ["multipart"], optional = true }
leptos_axum = { version = "=0.7.8", optional = true }
tower-http = { version = "0.6.11", features = ["fs", "cors", "compression-gzip", "set-header"], optional = true }
tower = { version = "0.5.3", optional = true }
http = { version = "1.4.1", optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
any_spawner = { version = "=0.2.0", features = ["tokio"], optional = true }
notify = { version = "8.2.0", optional = true }
tokio-stream = { version = "0.1.18", optional = true }
async-stream = { version = "0.3.6", optional = true }
rand = { version = "0.10.1", optional = true }
uuid = { version = "1.23.1", features = ["v4"], optional = true }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
semver = { version = "1.0.28", optional = true }
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.46", optional = true }
libc = { version = "0.2.186", optional = true }
nix = { version = "0.31.3", features = ["fs"], optional = true }
ring = { version = "0.17.14", optional = true }
# Hydrate-only (optional, activated by `hydrate` feature)
web-sys = { version = "0.3.99", features = [
    "HtmlInputElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "EventSource",
    "MessageEvent",
    "Storage",
    "File",
    "FileList",
    "FormData",
    "Document",
    "Element",
    "KeyboardEvent",
    "RequestInit",
    "Response",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Event",
    "EventTarget",
    "AddEventListenerOptions",
    "Window",
], optional = true }
gloo-timers = { version = "0.4.0", features = ["futures"], optional = true }
send_wrapper = { version = "0.6.0", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tikv-jemallocator = { version = "0.7.0", optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:web-sys",
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "dep:console_error_panic_hook",
    "dep:send_wrapper",
]
ssr = [
    "leptos/ssr",
    "server_fn/axum-no-default",
    "replay-control-core-server/library",
    "dep:replay-control-core-server",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tower-http",
    "dep:tower",
    "dep:http",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:clap",
    "dep:any_spawner",
    "dep:notify",
    "dep:tokio-stream",
    "dep:async-stream",
    "dep:rand",
    "dep:tikv-jemallocator",
    "dep:reqwest",
    "dep:semver",
    "dep:flate2",
    "dep:tar",
    "dep:libc",
    "dep:nix",
    "dep:uuid",
    "dep:ring",
]

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
mockito = "1.7.2"
tempfile = "3.27.0"
