[package]
name = "replay-control-core-server"
version = "1.1.2"
edition = "2024"
description = "Server-side (native) implementation for Replay Control: SQLite catalog, filesystem, HTTP, metadata ETL"
license.workspace = true
repository.workspace = true

[features]
default = []
library = ["dep:quick-xml", "dep:chd"]

[dependencies]
replay-control-core = { path = "../replay-control-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.5.8"
crc32fast = "1.5.0"
md-5 = "0.11.0"
ring = "0.17.14"
semver = "1.0.28"
rusqlite = { version = "0.38.0", features = ["bundled"] }
deadpool-sqlite = { version = "=0.13.0", features = ["rt_tokio_1"] }
deadpool = "=0.13.0"
deadpool-sync = "=0.2.0"
tokio = { workspace = true, features = ["fs", "sync", "macros", "rt-multi-thread", "process", "io-util"] }
tokio-stream = "0.1.18"
quick-xml = { version = "0.41.0", optional = true }
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"] }
chd = { version = "0.3.4", optional = true }
reqwest = { workspace = true, features = ["stream", "query"] }
tempfile = "3.27.0"
getrandom = "0.4.3"
rcgen = "0.14.8"
base64 = "0.22.1"
time = "0.3.51"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"

[[bin]]
name = "library_report"
required-features = ["library"]

[dev-dependencies]
mockito = "1.7.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
