[package]
name = "replay-control-core"
version = "0.4.0-beta.2"
edition = "2024"
description = "Core library for Replay Control — game databases, ROM parsing, metadata, and settings"
license.workspace = true
repository.workspace = true

[features]
default = []
metadata = ["dep:quick-xml"]
http = ["dep:reqwest"]


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
quick-xml = { version = "0.39", optional = true }
reqwest = { workspace = true, optional = true }
crc32fast = "1"
semver = "1"

[[bin]]
name = "metadata_report"
required-features = ["metadata"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.38", features = ["bundled"] }
deadpool-sqlite = { version = "0.13", features = ["rt_tokio_1"] }
deadpool = "0.13"
deadpool-sync = "0.2"
tokio = { workspace = true, features = ["fs", "sync", "macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
