[package]
name = "replay-control-core"
version = "0.4.0-beta.7"
edition = "2024"
description = "Pure types, wire contracts, and domain logic for Replay Control"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
semver = "1"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"
