[package]
name = "replay-control-core"
version = "0.8.0"
edition = "2024"
description = "Pure types, wire contracts, and domain logic for Replay Control"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5.8"
thiserror = { workspace = true }
tracing = { workspace = true }
semver = "1.0.28"
crc32fast = "1.5.0"

[dev-dependencies]
tempfile = "3.27.0"
