[package]
name = "replay-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "replay-frontend"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "FormData", "File", "FileList"] }
