[package]
name = "build-catalog"
version = "0.1.0"
edition = "2024"
publish = false
description = "Builds catalog.sqlite from raw game data files"
license.workspace = true
repository.workspace = true

[dependencies]
replay-control-core = { path = "../../replay-control-core" }
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
csv = "1.4.0"
quick-xml = "0.40.1"
ring = "0.17.14"
serde = { workspace = true }
serde_json = { workspace = true }
